# twitter-discord-bot

./: .env.example  .gitignore  .replit  COOKIES_SETUP.md  README.md  bot.py  bot2.py  cookies.json  discord_bot.py  embed_server.py  fetch_tweets.py  index.js  package-lock.json  package.json  posted_tweets.json  pyproject.toml  replit.md  requirements.txt  scraper.js
src/: config.js  discordBot.js  index.js  twitterService.js
